2007-09-19  Federico Mena Quintero  <federico@novell.com>

	* lib/userdb.py (get_setting): ARGH, remove a stray parenthesis.

==================== 2.20.0 ====================

2007-09-19  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bumped version number to 2.20.0.

2007-09-19  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=475434 - Plurals
	were not getting translated as gettext.ngettext() assumes
	textdomain() / bindtextdomain() have been called, but we use
	gettext.install() instead.

	* lib/util.py (init_gettext): Add ngettext as part of the "names"
	argument to gettext.install, so that ngettext() will get bound as a
	built-in.

	* admin-tool/saveconfirm.py (SaveConfirmationAlert.__init__): Call
	ngettext(), not gettext.ngettext(); the former is now bound as a
	built-in.

2007-09-19  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=450085 - Strings
	coming from sabayon.glade do not appear translated.

	* admin-tool/profilesdialog.py (AddProfileDialog.__init__): Pass
	the l10n domain to gtk.glade.XML.
	(ProfilesDialog.__init__): Likewise.

	* admin-tool/usersdialog.py (UsersDialog.__init__): Likewise.

2007-09-13  Federico Mena Quintero  <federico@novell.com>

	* lib/debuglog.py (DebugLog.load_configuration): Set a force_dump
	flag.  If the configuration file for the debug log is present,
	we'll assume that the user wants Sabayon to dump its debug log
	even if no errors occurred.
	(debug_log_get_force_dump): Public function.

	* admin-tool/sabayon (main): Dump the debug log if force_dump is enabled.

2007-09-13  Federico Mena Quintero  <federico@novell.com>

	* lib/config.py.in (DIRECTORIES_TO_IGNORE): Argh!  Add a missing
	comma in the list of strings; this is why .fontconfig and .beagle
	were not getting ignored.

2007-08-23  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=461110 - some