@@ -1,3 +1,9 @@
+2007-12-19  Federico Mena Quintero  <federico@novell.com>
+
+	* lib/storage.py (copy_tree): Create all the directories in the
+	path (mkdir -p).  Fixes
+	http://bugzilla.gnome.org/show_bug.cgi?id=486216 - patch by Dan Walsh.
+
 2007-09-19  Federico Mena Quintero  <federico@novell.com>
 
 	* lib/userdb.py (get_setting): ARGH, remove a stray parenthesis.
